--- a/forGithubTest/Base.lproj/Main.storyboard
+++ b/forGithubTest/Base.lproj/Main.storyboard
@@ -18,13 +18,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n49-nI-tsQ">
-                                <rect key="frame" x="105" y="318" width="164" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n49-nI-tsQ">
+                                <rect key="frame" x="105.5" y="318.5" width="164" height="30"/>
                                 <state key="normal" title="hey xcode 9 with github"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggf-sw-pwd">
+                                <rect key="frame" x="115.5" y="375.5" width="144" height="30"/>
+                                <state key="normal" title="this is second button"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="n49-nI-tsQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8gn-nU-6KT"/>
+                            <constraint firstItem="n49-nI-tsQ" firstAttribute="centerX" secondItem="ggf-sw-pwd" secondAttribute="centerX" id="JGK-0F-HKu"/>
+                            <constraint firstItem="n49-nI-tsQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="TbY-nW-D2i"/>
+                            <constraint firstItem="ggf-sw-pwd" firstAttribute="top" secondItem="n49-nI-tsQ" secondAttribute="bottom" constant="27" id="eom-Hr-qD0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
